readme-table-added

--- a/templates/name_age.html
+++ b/templates/name_age.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1> Flask Application </h1>
+<h1> Name and Age </h1>
 
 <h3> Your Name is : {{name}}</h3>
 <h3> Your Age is : {{age}}</h3>
