--- a/templates/temp_name_age.html
+++ b/templates/temp_name_age.html
@@ -6,7 +6,10 @@
 </head>
 <body>
 
-<h1> Flask View Index Application</h1>
+<h1> Name and Age using Render Template </h1>
+
+<h3> Your Name is : {{ name }}</h3>
+<h3> Your Age is : {{ age }}</h3>
 
 </body>
 </html>
